// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: var(--wp-g2-color-text);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition-duration: var(--wp-g2-transition-duration);
  transition-duration: var(--wp-g2-transition-duration);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: currentColor;
  fill: currentColor;
  height: 5px;
  width: 5px;
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 svg {
  display: block;
}

<div
  class="components-arrow-indicator wp-components-arrow-indicator ic-ig3mah ic-otytyz ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="ArrowIndicator"
>
  <div
    class="ic-192yz5d emotion-1"
  >
    <div
      class="components-icon wp-components-icon ic-2q44rw ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="currentColor"
        height="5"
        size="5"
        viewBox="0 0 24 24"
        width="5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12l-18 12v-24z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render with a custom size 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: var(--wp-g2-color-text);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 17px;
  width: 17px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition-duration: var(--wp-g2-transition-duration);
  transition-duration: var(--wp-g2-transition-duration);
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: currentColor;
  fill: currentColor;
  height: 5px;
  width: 5px;
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 svg {
  display: block;
}

<div
  class="components-arrow-indicator wp-components-arrow-indicator ic-ig3mah ic-otytyz ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="ArrowIndicator"
>
  <div
    class="ic-192yz5d emotion-1"
  >
    <div
      class="components-icon wp-components-icon ic-2q44rw ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="currentColor"
        height="5"
        size="5"
        viewBox="0 0 24 24"
        width="5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12l-18 12v-24z"
        />
      </svg>
    </div>
  </div>
</div>
`;
